2012-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (numeq): Fix misplaced parenthesis.

2012-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (min2, max2): Semantics tweak. If the numbers are equal,
	favor the left one.

	* txr.1: Documented min and max.

2012-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (numeq): New function.
	(exptmod): Bugfix: was no normalizing the bignum, ouch.
	Also was reporting "non-integral operands" for other
	errors.

	* eval.c (eval_init): Registered = intrinsic function.

	* lib.c (numeqv): New function.

	* lib.h (numeq, numeqv): Declared.

	* txr.1: Documented expt, sqrt, isqrt, exptmod, fixnump, bignump,
	integerp, floatp, numberp, zerop, evenp, oddp, >, <, >=, <= and =.

	* txr.vim: Highlight =

2012-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (gcd): Allow zeros. Don't issue "non-integral"
	exception if MPI fails.
	(floorf, ceili): Map integer argument to itself.
	(tang, asine, acosi): New functions.

	* eval.c (eval_init): New intrinsics: tan, asin, acos.

	* lib.h (tang, asine, acosi): Declared.

	* txr.1: Documented gcd, abs, floor, ceil, sin, cos, tan
	asin, acos, atan, log, and exp.

	* txr.vim: Highlighting for tang, asine, acosi.

2012-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (dmod): New static function.
	(mod): Use dmod instead of fmod directly, to calculate
	the correct semantics for combinations of
	negative operands in the floating point domain also.

	* txr.1: Documented /, trunc and mod.

2012-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Documented +, - and *.

2012-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: num-str added to doc stub.

	* txr.vim: num-str added.

2012-03-28  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (obj_print, obj_pprint): Do not use the #<lazy-string ..>
	notation for lazy strings that have been forced.

2012-03-27  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (vformat): Compensate for differences in printf